tests/ui/inference/tutorial-suffix-inference-test.stderr
error[E0308]: mismatched types
  --> $DIR/tutorial-suffix-inference-test.rs:11:18
   |
LL |     identity_u16(x);
   |     ------------ ^ expected `u16`, found `u8`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/tutorial-suffix-inference-test.rs:8:8
   |
LL |     fn identity_u16(n: u16) -> u16 { n }
   |        ^^^^^^^^^^^^ ------
help: you can convert a `u8` to a `u16`
   |
LL |     identity_u16(x.into());
   |                   +++++++

error[E0308]: mismatched types
  --> $DIR/tutorial-suffix-inference-test.rs:14:18
   |
LL |     identity_u16(y);
   |     ------------ ^ expected `u16`, found `i32`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/tutorial-suffix-inference-test.rs:8:8
   |
LL |     fn identity_u16(n: u16) -> u16 { n }
   |        ^^^^^^^^^^^^ ------
help: you can convert an `i32` to a `u16` and panic if the converted value doesn't fit
   |
LL |     identity_u16(y.try_into().unwrap());
   |                   ++++++++++++++++++++

error[E0308]: mismatched types
  --> $DIR/tutorial-suffix-inference-test.rs:23:18
   |
LL |     identity_u16(a);
   |     ------------ ^ expected `u16`, found `isize`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/tutorial-suffix-inference-test.rs:8:8
   |
LL |     fn identity_u16(n: u16) -> u16 { n }
   |        ^^^^^^^^^^^^ ------
help: you can convert an `isize` to a `u16` and panic if the converted value doesn't fit
   |
LL |     identity_u16(a.try_into().unwrap());
   |                   ++++++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
